--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,4 +56,13 @@
         <servlet-name>OrderController</servlet-name>
         <url-pattern>/Order</url-pattern>
     </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>CartController</servlet-name>
+        <servlet-class>com.mvc.controller.CartControllet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CartController</servlet-name>
+        <url-pattern>/Cart</url-pattern>
+    </servlet-mapping>
 </web-app>
