--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -111,4 +111,12 @@
         <url-pattern>/Payment</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>MainPageController</servlet-name>
+        <servlet-class>com.mvc.controller.MainPageController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>MainPageController</servlet-name>
+        <url-pattern>/MainPage</url-pattern>
+    </servlet-mapping>
 </web-app>
